--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>AOS - Animate on scroll library</title>
+    <title>Simple AOS - Animate on scroll library</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="dist/aos.css" />
