--- a/demo/offset.html
+++ b/demo/offset.html
@@ -5,7 +5,6 @@
     <title>Simple AOS - Animate on scroll library</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="dist/aos.css" />
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
@@ -49,9 +48,9 @@
       <div data-id="27" class="aos-item" data-aos="zoom-in-up" data-aos-offset="150"></div>
     </div>
 
-    <script src="dist/aos.js"></script>
+    <script src="../dist/aos.js"></script>
     <script>
-      if (!window.Cypress) AOS.init();
+      AOS.init();
     </script>
   </body>
 </html>
