--- a/demo/anchor.html
+++ b/demo/anchor.html
@@ -54,9 +54,9 @@
       </div>
     </div>
 
-    <script src="dist/aos.js"></script>
+    <script src="../dist/aos.js"></script>
     <script>
-      if (!window.Cypress) AOS.init();
+      AOS.init();
     </script>
   </body>
 </html>
