--- a/demo/animatecss.html
+++ b/demo/animatecss.html
@@ -46,9 +46,9 @@
       <div data-id="24" class="aos-item" data-aos="fadeInUp"></div>
     </div>
 
-    <script src="dist/aos.js"></script>
+    <script src="../dist/aos.js"></script>
     <script>
-      if (!window.Cypress) AOS.init({
+      AOS.init({
         useClassNames: true,
         initClassName: false,
         animatedClassName: 'animated',
