--- a/demo/async.html
+++ b/demo/async.html
@@ -5,7 +5,6 @@
     <title>Simple AOS - Animate on scroll library</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="dist/aos.css" />
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
@@ -13,14 +12,10 @@
   <body>
     <div id="aos-demo" class="aos-all"></div>
 
-    <script src="dist/aos.js"></script>
+    <script src="../dist/aos.js"></script>
     <script>
-      if (!window.Cypress) {
-        AOS.init();
-        setInterval(addItem, 150);
-      } else {
-        document.addEventListener('add-aos-item', addItem);
-      }
+      AOS.init();
+      setInterval(addItem, 150);
 
       var itemsCounter = 1;
       var container = document.getElementById('aos-demo');
