--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,6 @@
     <title>Simple AOS - Animate on scroll library</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="dist/aos.css" />
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
@@ -39,24 +38,22 @@
       <div data-id="24" class="aos-item" data-aos="zoom-out-down"></div>
     </div>
 
-    <script src="dist/aos.js"></script>
+    <script src="../dist/aos.js"></script>
     <script>
       document.querySelector('html').classList.remove('no-js');
-      if (!window.Cypress) {
-        const scrollCounter = document.querySelector('.js-scroll-counter');
+      const scrollCounter = document.querySelector('.js-scroll-counter');
 
-        AOS.init({
-          mirror: true
-        });
+      AOS.init({
+        mirror: true
+      });
 
-        document.addEventListener('aos:in', function(e) {
-          console.log('in!', e.detail);
-        });
+      document.addEventListener('aos:in', function(e) {
+        console.log('in!', e.detail);
+      });
 
-        window.addEventListener('scroll', function() {
-          scrollCounter.innerHTML = window.pageYOffset;
-        });
-      }
+      window.addEventListener('scroll', function() {
+        scrollCounter.innerHTML = window.pageYOffset;
+      });
     </script>
   </body>
 </html>
